--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-LWP-Throttle 0.01
+LWP-UserAgent-Throttled 0.01
 
 INSTALLATION
 
@@ -14,21 +14,21 @@ SUPPORT AND DOCUMENTATION
 After installing, you can find documentation for this module with the
 perldoc command.
 
-    perldoc LWP::Throttle
+    perldoc LWP::UserAgent::Throttled
 
 You can also look for information at:
 
     RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=LWP-Throttle
+        http://rt.cpan.org/NoAuth/Bugs.html?Dist=LWP-UserAgent-Throttled
 
     AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/LWP-Throttle
+        http://annocpan.org/dist/LWP-UserAgent-Throttled
 
     CPAN Ratings
-        http://cpanratings.perl.org/d/LWP-Throttle
+        http://cpanratings.perl.org/d/LWP-UserAgent-Throttled
 
     Search CPAN
-        http://search.cpan.org/dist/LWP-Throttle/
+        http://search.cpan.org/dist/LWP-UserAgent-Throttled/
 
 
 LICENSE AND COPYRIGHT
