--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for LWP-UserAgent-Throttled
 
-0.03
+0.03	Sat 27 May 14:04:14 EDT 2017
 	Throttle each site independantly
 	Changed 'load' method to 'throttle'
 
