--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for LWP-UserAgent-Throttled
 
+0.07
+	Use TEST_REQUIRES
+
 0.06.2
 	Try a fix for http://www.cpantesters.org/cpan/report/f632cf00-555f-11e7-a074-e1beba07c9dd
 
