--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for LWP-UserAgent-Throttled
 
 0.07
 	Use TEST_REQUIRES
+	Added ua() method - TODO: add tests
 
 0.06.2
 	Try a fix for http://www.cpantesters.org/cpan/report/f632cf00-555f-11e7-a074-e1beba07c9dd
