--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for LWP-UserAgent-Throttled
 
+0.07.1	Wed Apr 21 10:28:14 EDT 2021
+	Fix mymeta
+
 0.07	Wed Apr 21 08:20:00 EDT 2021
 	Use TEST_REQUIRES
 	Added ua() method
