--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for LWP-UserAgent-Throttled
 
+0.09
+	Fix http://www.cpantesters.org/cpan/report/91a6ac80-6bf9-1014-b7eb-bb2be30b7e63
+
 0.08	Thu Apr 29 14:16:30 EDT 2021
 	Somehow the last release didn't go out
 
