--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for LWP-UserAgent-Throttled
 
-0.10
+0.10	Mon Jun 17 09:00:44 EDT 2024
 	Fix http://www.cpantesters.org/cpan/report/55bb4f64-8d7e-11ec-adcf-8cefa471f67a
 
 0.09	Fri Jan 28 11:15:53 EST 2022
