--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for LWP-UserAgent-Throttled
 
+0.11
+	Use gtar to create a distribution on Macs
+	Use Test::DescribeMe to simplify tests
+	Use Test::Needs
+
 0.10	Mon Jun 17 09:00:44 EDT 2024
 	Fix http://www.cpantesters.org/cpan/report/55bb4f64-8d7e-11ec-adcf-8cefa471f67a
 
