--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for LWP-UserAgent-Throttled
 
-0.11
+0.12	Wed Jan  1 11:09:20 EST 2025
 	Use gtar to create a distribution on Macs
 	Use Test::DescribeMe to simplify tests
 	Use Test::Needs
