--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for LWP-UserAgent-Throttled
 
-0.13
+0.13	Fri Apr 11 08:28:00 EDT 2025
 	Improve testing on slower machines
 
 0.12	Wed Jan  1 11:09:20 EST 2025
