--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for LWP-UserAgent-Throttled
 
+0.14
+	Fix http://www.cpantesters.org/cpan/report/f1868102-19a3-11f0-98b0-b3c3213a625c
+
 0.13	Fri Apr 11 08:28:00 EDT 2025
 	Improve testing on slower machines
 
